# FIAP_Credit_Analysis_Machine_Learning_Model

./: README.md  app.py  pyproject.toml  utils.py
notebooks/: credit_card_notebook.ipynb  df_clean.csv  xgb.joblib
output/: test_df.csv  train_df.csv
